give footer links content for accessibility

--- a/index.html
+++ b/index.html
@@ -291,14 +291,17 @@
           <div class="col-lg-2 col-md-4 col-12">
             <div class="d-flex justify-content-center justify-content-md-center">
               <a href="" class="round-icon d-flex justify-content-center align-items-center">
+                <span class="sr-only"></span>
                 <i class="fa fa-facebook"></i>
               </a>
 
               <a href="" class="round-icon d-flex justify-content-center align-items-center">
+                <span class="sr-only"></span>
                 <i class="fa fa-twitter"></i>
               </a>
 
               <a href="" class="round-icon d-flex justify-content-center align-items-center">
+                <span class="sr-only"></span>
                 <i class="fa fa-instagram"></i>
               </a>
             </div>
